--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -7,7 +7,7 @@ html {
 }
 /* Navbar CSS */
 header.ui.secondary.pointing.menu {
-  padding: 0 15px;
+  padding: 0 3rem;
   position: fixed;
   width: 100%;
   top: 0;
@@ -15,10 +15,10 @@ header.ui.secondary.pointing.menu {
   font-size: 2rem;
   transition: background-color 0.5s ease;
   z-index: 1000;
-  background-color: #353839;
+  background-color: rgba(53, 56, 57, 0);
   height: 7rem;
-  color: #fff;
   margin-bottom: 0;
+  box-shadow: 0 2px 30px -5px rgba(0, 0, 0, 0.3);
 }
 
 /* Navbar width, margin, padding */
@@ -38,13 +38,27 @@ header.ui.secondary.pointing.menu {
   justify-content: space-between;
   transition: height 0.5s ease;
 }
+.nav .right.menu {
+  height: 100%;
+}
 
 /* Navbar links styling */
 header.ui.menu .nav a.item {
   font-size: 1rem;
   text-decoration: none;
-  color: #fff;
   font-size: 1.6rem;
+  height: 100%;
+  align-self: center;
+  color: rgba(53, 56, 57, 1);
+}
+
+header.ui.secondary.pointing.menu .nav a.item:hover {
+  background-color: rgba(53, 56, 57, 1);
+  color: #fff;
+}
+
+header.ui.menu.scrolling-active .nav a.item {
+  color: #fff;
 }
 
 .nav .logo {
@@ -52,11 +66,6 @@ header.ui.menu .nav a.item {
 }
 
 header.ui.secondary.pointing.menu.scrolling-active {
-  background-color: #fff;
-  box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(53, 56, 57, 0.9);
   height: 5rem;
-}
-
-header.ui.menu.scrolling-active .nav a.item {
-  color: #313131;
 }
