--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -7,6 +7,11 @@
   color: #fff;
   margin: 1rem 1rem 0 0;
   margin-bottom: 5rem;
+  transform: scale(1);
+  transition: transform 0.6s ease;
+}
+.box.not-in-view {
+  transform: scale(0.5);
 }
 .box__side {
   box-shadow: 0.5rem 1.5rem 2rem rgba(0, 0, 0, 0.2);
