--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -8,7 +8,7 @@
   margin: 1rem 1rem 0 0;
   margin-bottom: 5rem;
   transform: scale(1);
-  transition: transform 0.6s ease;
+  transition: transform 0.6s ease 0.5s;
 }
 .box.not-in-view {
   transform: scale(0.5);
