--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -65,6 +65,7 @@ header.ui.secondary.pointing.menu {
 header.ui.menu .navLarge a.item {
   font-size: 1rem;
   text-decoration: none;
+  text-transform: uppercase;
   font-size: 1.6rem;
   height: 100%;
   align-self: center;
