--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -11,9 +11,9 @@ body {
   font-size: 1.5rem;
   line-height: 1.7;
   color: #ececee;
-  background-color: #5e0735;
+  background-color: #5f0f4e;
   overflow-x: hidden;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
+  /* background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg"); */
   background-position: center;
   background-repeat: repeat;
   background-size: 4%;
@@ -34,8 +34,8 @@ header.ui.secondary.pointing.menu {
   font-size: 2rem;
   transition: background-color 0.8s ease;
   z-index: 1000;
-  background-color: rgba(53, 56, 57, 0);
-  height: 7rem;
+  background-color: #031424;
+  height: 9.5rem;
   margin-bottom: 0;
   box-shadow: 0 0.2rem 3rem -5px rgba(0, 0, 0, 0.3);
 }
@@ -62,7 +62,7 @@ header.ui.secondary.pointing.menu {
 }
 
 /* navLargebar links styling */
-header.ui.menu .navLarge a.item {
+header.ui.menu.secondary .navLarge a.item {
   font-size: 1rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -70,20 +70,33 @@ header.ui.menu .navLarge a.item {
   height: 100%;
   align-self: center;
   color: #fff;
+  transition: all 0.5s ease;
+}
+.right.menu:hover > a.item {
+  transform: scale(0.85);
 }
 
 header.ui.secondary.pointing.menu .navLarge a.item:hover {
   background-color: rgba(53, 56, 57, 1);
   color: #fff;
+  border-bottom: 2px solid #fff;
+  transform: scale(1.1);
 }
 
-.navLarge .logo {
-  height: 75%;
+.logo {
+  height: 100%;
+  padding: 1rem;
+  transition: all 0.5s ease;
 }
-
-header.ui.secondary.pointing.menu.scrolling-active {
-  background-color: rgba(53, 56, 57, 0.8);
-  height: 5rem;
+.logo:hover {
+  transform: scale(1.1);
+}
+li .logo {
+  height: 12rem;
+}
+.logo img {
+  height: 100%;
+  /* width: 100px; */
 }
 
 [type="checkbox"]:checked,
