--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -256,23 +256,26 @@ li .logo {
   transition: all 250ms linear;
 }
 .nav ul li:nth-child(1) {
-  transition-delay: 250ms;
+  transition-delay: 300ms;
 }
 .nav ul li:nth-child(2) {
-  transition-delay: 200ms;
+  transition-delay: 250ms;
 }
 .nav ul li:nth-child(3) {
+  transition-delay: 200ms;
+}
+.nav ul li:nth-child(4) {
   transition-delay: 150ms;
 }
-.nav ul li:nth-child(4) {
+.nav ul li:nth-child(5) {
   transition-delay: 100ms;
 }
-.nav ul li:nth-child(4) {
+.nav ul li:nth-child(6) {
   transition-delay: 50ms;
 }
 .nav ul li a {
   font-family: "Londrina Outline", cursive;
-  font-size: 9vh;
+  font-size: 6rem;
   text-transform: uppercase;
   line-height: 1.2;
   font-weight: 800;
@@ -323,4 +326,7 @@ li .logo {
 }
 .menu-icon:checked ~ .nav ul li:nth-child(5) {
   transition-delay: 1720ms;
+}
+.menu-icon:checked ~ .nav ul li:nth-child(6) {
+  transition-delay: 1800ms;
 }
