Glitch effect and fixed resize window effect added useLayoutEffect instead of useEffect

--- a/src/components/Founders/founderStyle.css
+++ b/src/components/Founders/founderStyle.css
@@ -14,11 +14,12 @@
 }
 
 .heading__founders {
-  font-size: 3rem;
+  font-size: 4rem;
+  width: 40rem;
+  background: black;
   text-transform: uppercase;
   font-weight: 600;
   margin-bottom: 3rem;
-  padding: 2rem;
   display: inline-block;
   border-radius: 2rem;
   transition: all 0.5s ease;
@@ -26,14 +27,238 @@
 }
 .heading__founders.founders {
   color: #30336b;
-  background-image: linear-gradient(to right bottom, #f6e58d, #f0932b);
-}
-.heading__founders.teachers {
-  color: #1e3799;
-  background-image: linear-gradient(to right bottom, #82ccdd, #079992);
+  /* background-image: linear-gradient(to right bottom, #f6e58d, #f0932b); */
 }
 
-.heading__founders:hover {
-  transform: scale(0.99);
-  box-shadow: 0.5rem 1.5rem 2rem rgba(0, 0, 0, 0.2);
+.heading__founders.founders.glitch {
+  color: #dfbfbf;
+  position: relative;
+  animation: glitch 5s 5s infinite;
+}
+.glitch::before {
+  border-radius: 2rem;
+  background: black;
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: -5px 0 magenta;
+  overflow: hidden;
+  top: 0;
+  animation: noise-1 3s linear infinite alternate-reverse,
+    glitch 5s 5.05s infinite;
+}
+.glitch::after {
+  border-radius: 2rem;
+  background: black;
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -5px 0 lightgreen;
+  /* background: black; */
+  overflow: hidden;
+  top: 0;
+  animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+}
+@keyframes glitch {
+  1% {
+    transform: rotateX(10deg) skewX(90deg);
+  }
+  2% {
+    transform: rotateX(0deg) skewX(0deg);
+  }
+}
+@keyframes glitch-2 {
+  1% {
+    transform: rotateX(10deg) skewX(70deg);
+  }
+  2% {
+    transform: rotateX(0deg) skewX(0deg);
+  }
+}
+@keyframes noise-1 {
+  3.3333333333% {
+    clip-path: inset(4px 0 88px 0);
+  }
+  6.6666666667% {
+    clip-path: inset(25px 0 41px 0);
+  }
+  10% {
+    clip-path: inset(8px 0 85px 0);
+  }
+  13.3333333333% {
+    clip-path: inset(60px 0 40px 0);
+  }
+  16.6666666667% {
+    clip-path: inset(28px 0 27px 0);
+  }
+  20% {
+    clip-path: inset(7px 0 56px 0);
+  }
+  23.3333333333% {
+    clip-path: inset(59px 0 13px 0);
+  }
+  26.6666666667% {
+    clip-path: inset(99px 0 2px 0);
+  }
+  30% {
+    clip-path: inset(19px 0 13px 0);
+  }
+  33.3333333333% {
+    clip-path: inset(20px 0 11px 0);
+  }
+  36.6666666667% {
+    clip-path: inset(57px 0 43px 0);
+  }
+  40% {
+    clip-path: inset(19px 0 50px 0);
+  }
+  43.3333333333% {
+    clip-path: inset(66px 0 28px 0);
+  }
+  46.6666666667% {
+    clip-path: inset(49px 0 17px 0);
+  }
+  50% {
+    clip-path: inset(77px 0 13px 0);
+  }
+  53.3333333333% {
+    clip-path: inset(78px 0 19px 0);
+  }
+  56.6666666667% {
+    clip-path: inset(78px 0 13px 0);
+  }
+  60% {
+    clip-path: inset(26px 0 42px 0);
+  }
+  63.3333333333% {
+    clip-path: inset(19px 0 70px 0);
+  }
+  66.6666666667% {
+    clip-path: inset(98px 0 2px 0);
+  }
+  70% {
+    clip-path: inset(49px 0 34px 0);
+  }
+  73.3333333333% {
+    clip-path: inset(15px 0 77px 0);
+  }
+  76.6666666667% {
+    clip-path: inset(43px 0 9px 0);
+  }
+  80% {
+    clip-path: inset(32px 0 66px 0);
+  }
+  83.3333333333% {
+    clip-path: inset(58px 0 24px 0);
+  }
+  86.6666666667% {
+    clip-path: inset(73px 0 16px 0);
+  }
+  90% {
+    clip-path: inset(51px 0 3px 0);
+  }
+  93.3333333333% {
+    clip-path: inset(60px 0 20px 0);
+  }
+  96.6666666667% {
+    clip-path: inset(82px 0 1px 0);
+  }
+  100% {
+    clip-path: inset(57px 0 11px 0);
+  }
+}
+@keyframes noise-2 {
+  0% {
+    clip-path: inset(47px 0 50px 0);
+  }
+  3.3333333333% {
+    clip-path: inset(26px 0 57px 0);
+  }
+  6.6666666667% {
+    clip-path: inset(13px 0 54px 0);
+  }
+  10% {
+    clip-path: inset(66px 0 3px 0);
+  }
+  13.3333333333% {
+    clip-path: inset(21px 0 41px 0);
+  }
+  16.6666666667% {
+    clip-path: inset(81px 0 16px 0);
+  }
+  20% {
+    clip-path: inset(21px 0 77px 0);
+  }
+  23.3333333333% {
+    clip-path: inset(45px 0 17px 0);
+  }
+  26.6666666667% {
+    clip-path: inset(21px 0 55px 0);
+  }
+  30% {
+    clip-path: inset(94px 0 4px 0);
+  }
+  33.3333333333% {
+    clip-path: inset(48px 0 11px 0);
+  }
+  36.6666666667% {
+    clip-path: inset(62px 0 32px 0);
+  }
+  40% {
+    clip-path: inset(72px 0 3px 0);
+  }
+  43.3333333333% {
+    clip-path: inset(42px 0 36px 0);
+  }
+  46.6666666667% {
+    clip-path: inset(28px 0 37px 0);
+  }
+  50% {
+    clip-path: inset(23px 0 16px 0);
+  }
+  53.3333333333% {
+    clip-path: inset(51px 0 24px 0);
+  }
+  56.6666666667% {
+    clip-path: inset(84px 0 8px 0);
+  }
+  60% {
+    clip-path: inset(15px 0 6px 0);
+  }
+  63.3333333333% {
+    clip-path: inset(90px 0 3px 0);
+  }
+  66.6666666667% {
+    clip-path: inset(64px 0 17px 0);
+  }
+  70% {
+    clip-path: inset(26px 0 11px 0);
+  }
+  73.3333333333% {
+    clip-path: inset(8px 0 3px 0);
+  }
+  76.6666666667% {
+    clip-path: inset(21px 0 36px 0);
+  }
+  80% {
+    clip-path: inset(95px 0 6px 0);
+  }
+  83.3333333333% {
+    clip-path: inset(3px 0 84px 0);
+  }
+  86.6666666667% {
+    clip-path: inset(16px 0 18px 0);
+  }
+  90% {
+    clip-path: inset(49px 0 28px 0);
+  }
+  93.3333333333% {
+    clip-path: inset(61px 0 20px 0);
+  }
+  96.6666666667% {
+    clip-path: inset(74px 0 14px 0);
+  }
+  100% {
+    clip-path: inset(89px 0 5px 0);
+  }
 }
