--- a/src/components/Founders/founderStyle.css
+++ b/src/components/Founders/founderStyle.css
@@ -15,6 +15,7 @@
 
 .heading__founders {
   font-size: 4rem;
+  padding: 1rem;
   width: 40rem;
   background: black;
   text-transform: uppercase;
@@ -22,28 +23,24 @@
   margin-bottom: 3rem;
   display: inline-block;
   border-radius: 2rem;
-  transition: all 0.5s ease;
   box-shadow: 0.2rem 0.7rem 1rem rgb(0 0 0 / 20%);
-}
-.heading__founders.founders {
-  color: #30336b;
-  /* background-image: linear-gradient(to right bottom, #f6e58d, #f0932b); */
 }
 
 .heading__founders.founders.glitch {
   color: #dfbfbf;
   position: relative;
-  animation: glitch 5s 5s infinite;
 }
 .glitch::before {
   border-radius: 2rem;
   background: black;
   content: attr(data-text);
   position: absolute;
-  left: -2px;
+  padding: 1rem;
+  left: 2px;
   text-shadow: -5px 0 magenta;
   overflow: hidden;
   top: 0;
+  display: block;
   animation: noise-1 3s linear infinite alternate-reverse;
 }
 .glitch::after {
@@ -51,29 +48,15 @@
   background: black;
   content: attr(data-text);
   position: absolute;
+  padding: 1rem;
   left: 2px;
   text-shadow: -5px 0 lightgreen;
   /* background: black; */
   overflow: hidden;
   top: 0;
+  display: block;
   animation: noise-2 3s linear infinite alternate-reverse;
 }
-/* @keyframes glitch {
-  1% {
-    transform: rotateX(10deg) skewX(90deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
-} */
-/* @keyframes glitch-2 {
-  1% {
-    transform: rotateX(10deg) skewX(70deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
-} */
 @keyframes noise-1 {
   3.3333333333% {
     clip-path: inset(4px 0 88px 0);
