--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -40,14 +40,6 @@ header.ui.secondary.pointing.menu {
   box-shadow: 0 0.2rem 3rem -5px rgba(0, 0, 0, 0.3);
 }
 
-/* navLargeLargebar width, margin, padding */
-.contain {
-  width: 100%;
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
 /* Width, alignment, border, height for navLargeLargebar */
 .navLarge {
   width: 100%;
@@ -119,13 +111,11 @@ li .logo {
   /* width: 100px; */
 }
 
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
+[type="checkbox"] {
   position: absolute;
   left: -9999px;
 }
-.menu-icon:checked + label,
-.menu-icon:not(:checked) + label {
+.menu-icon + label {
   position: fixed;
   top: 5.3rem;
   right: 5.5rem;
@@ -137,8 +127,7 @@ li .logo {
   cursor: pointer;
   z-index: 200;
 }
-.menu-icon:checked + label:before,
-.menu-icon:not(:checked) + label:before {
+.menu-icon + label:before {
   position: absolute;
   content: "";
   display: block;
@@ -154,8 +143,7 @@ li .logo {
     height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
     background-color 200ms ease, transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-.menu-icon:checked + label:after,
-.menu-icon:not(:checked) + label:after {
+.menu-icon + label:after {
   position: absolute;
   content: "";
   display: block;
@@ -275,22 +263,22 @@ li .logo {
   transform: translateY(3rem);
   transition: all 250ms linear;
 }
-.nav ul li:nth-child(1) {
+#item1 {
   transition-delay: 300ms;
 }
-.nav ul li:nth-child(2) {
+#item2 {
   transition-delay: 250ms;
 }
-.nav ul li:nth-child(3) {
+#item3 {
   transition-delay: 200ms;
 }
-.nav ul li:nth-child(4) {
+#item4 {
   transition-delay: 150ms;
 }
-.nav ul li:nth-child(5) {
+#item5 {
   transition-delay: 100ms;
 }
-.nav ul li:nth-child(6) {
+#item6 {
   transition-delay: 50ms;
 }
 .nav ul li a {
@@ -332,21 +320,21 @@ li .logo {
   transform: translateY(0);
   transition: opacity 350ms ease, transform 250ms ease;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(1) {
+.menu-icon:checked ~ .nav #item1 {
   transition-delay: 1400ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(2) {
+.menu-icon:checked ~ .nav #item2 {
   transition-delay: 1480ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(3) {
+.menu-icon:checked ~ .nav #item3 {
   transition-delay: 1560ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(4) {
+.menu-icon:checked ~ .nav #item4 {
   transition-delay: 1640ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(5) {
+.menu-icon:checked ~ .nav #item5 {
   transition-delay: 1720ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(6) {
+.menu-icon:checked ~ .nav #item6 {
   transition-delay: 1800ms;
 }
