--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -131,11 +131,11 @@ li .logo {
   position: absolute;
   content: "";
   display: block;
-  width: 3rem;
-  height: 2rem;
+  width: 4rem;
+  height: 3rem;
   z-index: 200;
-  top: 0;
-  left: 0;
+  top: 2px;
+  left: -7px;
   border-top: 0.2rem solid #ececee;
   border-bottom: 0.2rem solid #ececee;
   transition: border-width 100ms 1500ms ease,
@@ -143,15 +143,16 @@ li .logo {
     height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
     background-color 200ms ease, transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .menu-icon + label:after {
   position: absolute;
   content: "";
   display: block;
-  width: 2.2rem;
+  width: 3.2rem;
   height: 0.2rem;
   z-index: 200;
-  top: 1rem;
-  right: 0.4rem;
+  top: 2rem;
+  right: 0.7rem;
   background-color: #ececee;
   margin-top: -1px;
   transition: width 100ms 1750ms ease, right 100ms 1750ms ease,
@@ -183,8 +184,8 @@ li .logo {
   top: 2.3rem;
   right: 3rem;
   display: block;
-  width: 8rem;
-  height: 8rem;
+  width: 10rem;
+  height: 10rem;
   padding: 0;
   margin: 0;
   z-index: 100;
