--- a/src/components/Home/homeStyle.css
+++ b/src/components/Home/homeStyle.css
@@ -3,7 +3,7 @@
 #bg-image {
   height: 100vh;
   width: 100vw;
-  background: url("../../images/old_library.jpeg") no-repeat;
+  background: url("../../images/old_library.webp") no-repeat;
   background-size: 100vw 100vh;
   position: fixed;
   top: 0;
