--- a/src/components/Home/homeStyle.css
+++ b/src/components/Home/homeStyle.css
@@ -8,6 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: -1;
 }
 
 .header {
@@ -24,7 +25,7 @@ span.text {
 }
 
 .para {
-  min-width: calc(325px - 1rem - 10px);
+  min-width: calc(32.5rem - 1rem - 10px);
   display: flex;
   flex-direction: column wrap;
   flex-flow: column wrap;
@@ -60,7 +61,7 @@ img {
   max-width: 1000px;
   position: relative;
   margin: auto;
-  margin-bottom: 35px;
+  margin-bottom: 9rem;
   height: 70vh;
 }
 
@@ -71,20 +72,20 @@ img {
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px;
-  margin-top: -22px;
+  padding: 1.6rem;
+  margin-top: -2.2rem;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1.8rem;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 0.3rem 0.3rem 0;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
+  border-radius: 0.3rem 0 0 0.3rem;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -96,10 +97,10 @@ img {
 /* Caption text */
 .captiontext {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 1.5rem;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 0.8rem;
   width: 100%;
   text-align: center;
 }
@@ -107,8 +108,8 @@ img {
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
+  font-size: 1.2rem;
+  padding: 0.8rem 1.2rem;
   position: absolute;
   top: 0;
 }
@@ -116,9 +117,9 @@ img {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 20px;
-  width: 20px;
-  margin: 0 2px;
+  height: 2rem;
+  width: 2rem;
+  margin: 0 0.2rem;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -154,4 +155,26 @@ img {
   to {
     opacity: 1;
   }
+}
+
+.counters {
+  background: #0f479a;
+  color: #fff;
+  padding: 6.5rem 2rem;
+  border-top: 0.3rem lightskyblue solid;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.counters i {
+  color: lightskyblue;
+  margin-bottom: 0.5rem;
+}
+
+.counters .counter {
+  font-size: 4.5rem;
+  margin: 1rem 0;
 }
