--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -163,7 +163,7 @@ li .logo {
     margin-top 100ms ease, transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 .menu-icon:checked + label:before {
-  top: 1rem;
+  top: 2rem;
   transform: rotate(45deg);
   height: 0.2rem;
   background-color: #ececee;
@@ -175,9 +175,9 @@ li .logo {
     transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 .menu-icon:checked + label:after {
-  width: 3rem;
+  width: 4rem;
   margin-top: 0;
-  right: 0;
+  right: 3px;
   transform: rotate(-45deg);
   transition: width 100ms ease, right 100ms ease, margin-top 100ms 500ms ease,
     transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
