--- a/src/components/Footer/footerStyle.css
+++ b/src/components/Footer/footerStyle.css
@@ -23,12 +23,11 @@
   margin-right: 1.2rem;
   margin-bottom: 0;
 }
-.footer .footer__information > i,
-.footer .footer__icons > i {
+i {
   cursor: pointer;
   transition: color 0.5s ease;
 }
 
-.footer .footer__icons > i:hover {
+i:hover {
   color: #55efc4;
 }
