--- a/src/components/BusinessModel/modelStyle.css
+++ b/src/components/BusinessModel/modelStyle.css
@@ -1,26 +1,28 @@
 .model__grid {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  height: 100vh;
   width: 100%;
   grid-gap: 10px;
   padding: 0.5rem;
-  font-size: 1.09rem;
+  font-size: 1.3rem;
   background: black;
   border: 4px solid aliceblue;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 .row ul {
   padding: 10px;
   list-style: none;
 }
-.row-1 {
+.row-1,
+.column-1 {
   grid-row: 1/2;
 }
-.row-2 {
+.row-2,
+.column-2 {
   grid-row: 2/3;
 }
-.row-full {
+.row-full,
+.column-full {
   grid-row: 1 / span 2;
 }
 .title {
