--- a/src/components/responsive.css
+++ b/src/components/responsive.css
@@ -3,6 +3,35 @@
     flex-flow: row wrap !important;
   }
 }
+@media screen and (max-width: 500px) {
+  .column-1 {
+    grid-column: 1/2;
+  }
+  .column-2 {
+    grid-column: 2/3;
+  }
+  .column-full {
+    grid-column: 1/3;
+  }
+  .column-1:nth-of-type(1n),
+  .column-2:nth-of-type(1n) {
+    grid-row: 3/4 !important;
+  }
+  .column-1:nth-of-type(2n),
+  .column-2:nth-of-type(2n) {
+    grid-row: 5/6 !important;
+  }
+  .column-full:nth-of-type(1n) {
+    grid-row: 4/5 !important;
+  }
+  .column-full:nth-of-type(2n) {
+    grid-row: 6/7 !important;
+  }
+  .model__grid {
+    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-rows: repeat(6, 1fr) !important;
+  }
+}
 @media only screen and (min-width: 768px) {
   html {
     font-size: 7px !important;
