--- a/src/components/BusinessModel/modelStyle.css
+++ b/src/components/BusinessModel/modelStyle.css
@@ -10,7 +10,7 @@
   grid-template-rows: repeat(2, 1fr);
 }
 .row ul {
-  padding: 10px;
+  padding: 1rem;
   list-style: none;
 }
 .row-1,
@@ -29,6 +29,6 @@
   text-align: center;
 }
 .row {
-  border-radius: 5px;
-  border: 4px solid #fff;
+  border-radius: 0.5rem;
+  border: 0.4rem solid #fff;
 }
