--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap");
 .box {
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -9,6 +10,7 @@
   margin-bottom: 5rem;
   transform: scale(1);
   transition: transform 0.6s ease 0.5s;
+  font-family: "Montserrat", sans-serif;
 }
 .box.not-in-view {
   transform: scale(0.5);
