--- a/src/components/Home/homeStyle.css
+++ b/src/components/Home/homeStyle.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 #bg-image {
   height: 100vh;
@@ -96,8 +97,9 @@ img {
 
 /* Caption text */
 .captiontext {
-  color: #f2f2f2;
-  font-size: 1.5rem;
+  color: #000;
+  font-size: 2rem;
+  font-weight: 900;
   padding: 8px 12px;
   position: absolute;
   bottom: 0.8rem;
@@ -163,9 +165,11 @@ img {
   padding: 6.5rem 2rem;
   border-top: 0.3rem lightskyblue solid;
   width: 100vw;
+  text-align: center;
+}
+.counters__flex {
   display: flex;
   align-items: center;
-  text-align: center;
   flex-flow: column wrap;
   justify-content: space-around;
 }
@@ -178,4 +182,5 @@ img {
 .counters .counter {
   font-size: 4.5rem;
   margin: 1rem 0;
+  font-family: "Bebas Neue", cursive;
 }
