--- a/src/components/responsive.css
+++ b/src/components/responsive.css
@@ -31,12 +31,19 @@
     grid-template-columns: repeat(2, 1fr) !important;
     grid-template-rows: repeat(6, 1fr) !important;
   }
+  .functionality {
+    flex-direction: column;
+  }
+  .content,
+  .functionality .images {
+    width: 100% !important;
+  }
 }
 @media only screen and (min-width: 768px) {
   html {
     font-size: 7px !important;
   }
-  .counters {
+  .counters__flex {
     flex-flow: row wrap !important;
   }
 }
