--- a/src/components/Functionality/functionalityStyle.css
+++ b/src/components/Functionality/functionalityStyle.css
@@ -65,16 +65,15 @@ h6 {
   margin: 0.3rem;
 }
 #heading {
-  margin-top: 6vh;
-  padding: 1vh 7vw 2vh 7vw;
+  margin-top: 6rem;
+  padding: 1rem 6rem 2rem 6rem;
   background-color: #3effdaba;
   border-top: solid white 2px;
   border-bottom: solid white 2px;
-  box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.5);
-  margin-bottom: 2rem;
+  box-shadow: 5px 10px 5px rgb(0 0 0 / 50%);
 }
 #pageTitle {
   color: white;
-  font-size: 10vh;
+  font-size: 8rem;
   font-family: "Bebas Neue", cursive;
 }
