--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -70,7 +70,7 @@
 }
 .image--Suyash {
   background-image: linear-gradient(to right, #7ed56f, #28b485),
-    url("https://images.unsplash.com/photo-1427830228531-ccf2652188b7");
+    url("../../images/Suyash__image.webp");
 }
 .image--Ananya {
   background-image: linear-gradient(to right bottom, #299bff, #5634fa),
