--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -70,11 +70,12 @@
 }
 .image--Suyash {
   background-image: linear-gradient(to right, #7ed56f, #28b485),
-    url("../../images/Suyash__image.webp");
+    url("../../images/Suyash__Image.webp");
 }
 .image--Ananya {
   background-image: linear-gradient(to right bottom, #299bff, #5634fa),
-    url("https://images.unsplash.com/photo-1427830228531-ccf2652188b7");
+    url("../../images//Ananya__Image.webp");
+  background-position: top;
 }
 .box__heading {
   font-size: 3rem;
