--- a/src/components/BusinessModel/modelStyle.css
+++ b/src/components/BusinessModel/modelStyle.css
@@ -4,10 +4,13 @@
   grid-gap: 10px;
   padding: 0.5rem;
   font-size: 1.3rem;
-  background: black;
+  color: #000;
+  font-weight: 400;
+  background: #3399ff;
   border: 4px solid aliceblue;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  margin-top: 5rem;
 }
 .row ul {
   padding: 1rem;
@@ -31,4 +34,5 @@
 .row {
   border-radius: 0.5rem;
   border: 0.4rem solid #fff;
+  background-color: #cce5ff;
 }
