--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.7;
   color: #ececee;
   background-color: #5f0f4e;
-  overflow-x: hidden;
+  overflow: hidden;
   /* background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg"); */
   background-position: center;
   background-repeat: repeat;
