--- a/src/components/Card/cardStyle.css
+++ b/src/components/Card/cardStyle.css
@@ -11,7 +11,7 @@
   transform: scale(1);
   transition: transform 0.6s ease 0.5s;
   font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .box.not-in-view {
   transform: scale(0.5);
@@ -36,6 +36,9 @@
   justify-content: center;
   visibility: hidden;
 }
+.box__side.back i {
+  visibility: hidden;
+}
 .back--1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), none;
 }
@@ -51,6 +54,9 @@
 }
 .box:hover .box__side.back {
   transform: rotateY(0);
+  visibility: visible;
+}
+.box:hover .box__side.back i {
   visibility: visible;
 }
 .box__image {
